package com.cafepos.ui;

public final class ConsoleView {
    public void print(String s) {
        System.out.println(s);
    }
}