@startuml Demo Classes UML
!theme plain

package "com.cafepos.demo" {
    class Week10MvcDemo {
        + {static} main(args: String[]): void
    }
}

package "com.cafepos.ui" {
    class EventWiringDemo {
        + {static} main(args: String[]): void
    }
    
    class OrderController {
        + createOrder(id: long): void
        + addItem(id: long, item: String, quantity: int): void
        + checkout(id: long, payment: int): String
    }
    
    class ConsoleView {
        + print(receipt: String): void
    }
}

package "com.cafepos.app.events" {
    class EventBus {
        + on(eventType: Class<T>, handler: Consumer<T>): void
        + emit(event: Object): void
    }
    
    class OrderCreated {
        + orderId(): long
    }
    
    class OrderPaid {
        + orderId(): long
    }
}

package "com.cafepos.infra" {
    class Wiring {
        + {static} createDefault(): Components
    }
    
    class Components {
        + repo(): OrderRepository
        + checkout(): CheckoutService
    }
}

Week10MvcDemo --> OrderController : creates
Week10MvcDemo --> ConsoleView : creates
Week10MvcDemo --> Wiring : calls createDefault()
Week10MvcDemo --> Components : uses

EventWiringDemo --> EventBus : creates
EventWiringDemo --> OrderController : creates
EventWiringDemo --> Wiring : calls createDefault()
EventWiringDemo --> Components : uses
EventWiringDemo --> OrderCreated : creates/emits
EventWiringDemo --> OrderPaid : creates/emits

@enduml